# cuc

./: .gitignore  KTU_2.14.txt  README.md
agent/: CHANGELOG.md  README.md  project_paths.py  pyproject.toml  reviewed_normalization.py  spacy_ugaritic_doc_builder.py  spacy_ugaritic_language.py  spacy_ugaritic_rewriter.py  spacy_ugaritic_types.py
agent/data_sources/: generic_parsing_overrides.tsv  onomastic_gloss_overrides.tsv
agent/docs/: attestation_reference_disambiguator_pipeline.md  baal_verbal_slash_pipeline.md  feminine_t_singular_split_pipeline.md  iii_aleph_case_pipeline.md  k_functor_bigram_context_pipeline.md  l_body_compound_prep_pipeline.md  l_functor_vocative_context_pipeline.md  l_kbd_compound_prep_pipeline.md  l_preposition_bigram_context_pipeline.md  n_stem_assimilated_n_pipeline.md  nominal_case_and_pronoun_pipeline.md  plurale_tantum_m_pipeline.md  prefixed_iii_aleph_verb_pipeline.md  reviewed_morphology_metrics.md  sh_stem_tail_reconstructability_pipeline.md  suffix_paradigm_pipeline.md  suffix_payload_collapse_pipeline.md  surface_reconstructability_pipeline.md  variant_row_unwrapper_pipeline.md  verb_form_encoding_split_pipeline.md  verb_form_morph_pos_pipeline.md  verb_pos_stem_pipeline.md  verb_stem_suffix_marker_pipeline.md
agent/full_regeneration/: __init__.py  reports.py  runner.py
agent/lint_reports/: __init__.py  charts.py  constants.py  generator.py  models.py  parser.py
agent/linter/: feature_validation.py  lint.py  morphology.py
agent/morph_features/: __init__.py  analysis_decoder.py  dulat_feature_reader.py  nominal_completion.py  (+6 more)
(+995 files in other folders)
