[project]
name = "cuc-morph"
version = "0.1.0"
description = "Ugaritic morphological parsing pipeline"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"linter/lint.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
